# BookmarkAI

./: .claudeignore  .dockerignore  .env.example  .envrc  .eslintrc.js  .gitignore  .gitmessage  .lintstagedrc.js  .npmrc  .prettierrc.js  CLAUDE.md  PROJECT_CONTEXT.md  PROJECT_CONTEXT.md.bak  README.md  TASK_MAP.md  create_ml_results_table.sql  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  task-progress.md  test-contracts-complete.sh  test-contracts-local.sh  test-env.js  test_celery_task.py  tsconfig.json
python/: README.md  flower_app.py  llm_service  pyproject.toml  requirements-base.txt  test_manual_consumer.py  test_worker.py  vector_service  whisper_service
python/caption-service/: README.md  setup.py
python/common/: __init__.py  celery_app.py  celery_minimal.py  config.py  database.py  observability.py  utils.py
python/llm-service/: .env.example  Dockerfile  README.md  __init__.py  celery_app.py  requirements.txt  setup.py  start_worker.sh  summarizer.py  tasks.py  test_local.py  test_minimal.py  worker.py
python/llm-service/src/llm_service/: __init__.py  celery_app.py  content_preflight.py  db.py  llm_client.py  rate_limited_client.py  tasks.py  token_counter.py
python/shared/: setup.py
python/shared/shared/contracts/: base.py  (+5 more)
python/vector-service/: Dockerfile  README.md  __init__.py  celery_app.py  embedder.py  requirements.txt  setup.py  tasks.py
python/whisper-service/: Dockerfile  README.md  __init__.py  celery_app.py  requirements.txt  setup.py  tasks.py  test_whisper_rate_limit.py  transcriber.py
(+294 files in other folders)
