[tool.poetry]
name = "bookmarkai-ml"
version = "0.1.0"
description = "BookmarkAI ML Services"
authors = ["BookmarkAI Team"]
packages = [
    { include = "common" },
    { include = "whisper_service" },
    { include = "llm_service" },
    { include = "vector_service" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true